--- a/index.html
+++ b/index.html
@@ -257,33 +257,35 @@
         </form>
     </main>
    
-    <footer>
-        <div class="about">
-            <h3><i class="far fa-heart"></i>What we do</h3>
-            <p><i>We provide full range of language
-                services including content development,
-                document, website and social media
-                accounts translations.</i></p>
-        </div>
-        <div class="main-office-address">
-            <h3><i class="far fa-compass"></i>Our main office</h3>
-            <address>
-                <p>Dubai, UAE<br>
-                P.O.Box: 502735<br>
-                Phone: <a href="tel:+971(0)44278128">+971(0)44278128</a>
-                </p>
-            </address>
-        </div>
-        <div class="social">
-            <h3><i class="fas fa-share-alt"></i>Connect with us</h3>
-            <ul>
-                <li><i class="fab fa-facebook-square"></i>Facebook</li>
-                <li><i class="fab fa-twitter-square"></i>Twitter</li>
-                <li><i class="fab fa-linkedin"></i>Linkedin</li>
-            </ul>
-        </div>
-        <div class="logo">
-            <img src="img/logo_footer.png" alt="">
+    <footer class="page-footer">
+        <div class="footer-wrapper">
+            <div class="about">
+                <h3><i class="far fa-heart"></i>What we do</h3>
+                <p><i>We provide full range of language
+                    services including content development,
+                    document, website and social media
+                    accounts translations.</i></p>
+            </div>
+            <div class="main-office-address">
+                <h3><i class="far fa-compass"></i>Our main office</h3>
+                <address>
+                    <p>Dubai, UAE<br>
+                    P.O.Box: 502735<br>
+                    Phone: <a href="tel:+971(0)44278128">+971(0)44278128</a>
+                    </p>
+                </address>
+            </div>
+            <div class="social">
+                <h3><i class="fas fa-share-alt"></i>Connect with us</h3>
+                <ul>
+                    <li><i class="fab fa-facebook-square"></i>Facebook</li>
+                    <li><i class="fab fa-twitter-square"></i>Twitter</li>
+                    <li><i class="fab fa-linkedin"></i>Linkedin</li>
+                </ul>
+            </div>
+            <div class="logo">
+                <img src="img/logo_footer.png" alt="">
+            </div>
         </div>
     </footer>
 </body>
